[gd_scene load_steps=12 format=2]

[ext_resource path="res://characters/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/misc/stars.tscn" type="PackedScene" id=2]
[ext_resource path="res://stages/test_stage.gd" type="Script" id=3]
[ext_resource path="res://gui/stats_displayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/enemy_generator.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/music/Mercury.wav" type="AudioStream" id=6]
[ext_resource path="res://shaders/CA.tres" type="Material" id=7]
[ext_resource path="res://shaders/glow_env.tres" type="Environment" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 7.99999 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 128, 150 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 128, 40 )

[node name="Stage" type="Node2D"]
material = ExtResource( 7 )
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
use_parent_material = true
margin_right = 128.0
margin_bottom = 300.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
use_parent_material = true
margin_left = 384.0
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Stats" parent="CanvasLayer" instance=ExtResource( 4 )]
use_parent_material = true

[node name="Background" type="Node2D" parent="."]
use_parent_material = true

[node name="Background" type="ColorRect" parent="Background"]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Stars" parent="Background" instance=ExtResource( 2 )]
use_parent_material = true

[node name="Character" parent="." instance=ExtResource( 1 )]
use_parent_material = true
CAN_DIE = true

[node name="StageBorder" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="CollisionShape2D" parent="StageBorder"]
use_parent_material = true
position = Vector2( 120, 152 )
scale = Vector2( 1, 20 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Right" type="CollisionShape2D" parent="StageBorder"]
use_parent_material = true
position = Vector2( 392, 152 )
scale = Vector2( 1, 20 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="CollisionShape2D" parent="StageBorder"]
use_parent_material = true
position = Vector2( 256, -8 )
scale = Vector2( 17, 1 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bottom" type="CollisionShape2D" parent="StageBorder"]
use_parent_material = true
position = Vector2( 256, 308 )
scale = Vector2( 17, 1 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="StageArea" type="CollisionShape2D" parent="StageBorder"]
visible = false
use_parent_material = true
position = Vector2( 256, 150 )
shape = SubResource( 4 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="AutoCollectZone" type="Area2D" parent="."]
collision_layer = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoCollectZone"]
use_parent_material = true
position = Vector2( 256, 40 )
shape = SubResource( 5 )

[node name="EnemyGenerator" parent="." instance=ExtResource( 5 )]
use_parent_material = true
stagename = "2"

[node name="Enemies" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 256, -15 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 8 )

[connection signal="body_shape_entered" from="AutoCollectZone" to="." method="_on_AutoCollectZone_body_shape_entered"]
[connection signal="body_shape_exited" from="AutoCollectZone" to="." method="_on_AutoCollectZone_body_shape_exited"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
